--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -1,7 +1,6 @@
 ---
 title: '\large{Fishing in a warming ocean: influence of changing temperature and upwelling intensity on Indian oil sardine (\textit{Sardinella longiceps}) landings}'
-author: \newline Eli E. Holmes$^1$, Smitha B.R.$^2$, Nimit Kumar$^3$, \newline
-Sourav Maity$^3$, David M. Checkley$^4$, Mark L. Wells$^5$, Vera L. Trainer$^1$
+author: \newline Eli E. Holmes$^1$, Smitha B.R.$^2$, Nimit Kumar$^3$, \newline Sourav Maity$^3$, David M. Checkley$^4$, Mark L. Wells$^5$, Vera L. Trainer$^1$
 #date: '`r format(Sys.time(), "%d %B, %Y")`'
 output: 
   pdf_document: default
@@ -39,7 +38,7 @@ header-includes:
 
 # Acknowledgements {-}
 
-We thank the U.S. National Marine Fisheries Service and the Indian Ministy of Earth Sciences for support of the the joint U.S.-Indian research project: "Collaboration on the Development of a Fisheries and Harmful Algal Bloom and Monitoring and Prediction System in Indian Seas" which supported research visits. The visits took place at the Indian National Centre for Ocean Information Services (INCOIS) and Centre for Marine Living Resources and Ecology (CMLRE). We thank these institutes for their support during the research visits. We would also like to specifically acknowledge the support of  Dr. S.S.C Shenoi, Director of INCOIS, Dr. M. Sudhakar, Director of CMLRE, Dr. N. Saravanane (CMRLE), and Dr. Usha Varanasi (University of WAshington) for their support. The sardine landings data have been collected and analyzed by the Central Marine Fisheries Research Institute since the 1950s; we acknowledge the many researchers involved in this long-term data set.
+We thank the U.S. National Marine Fisheries Service and the Indian Ministy of Earth Sciences for support of the the joint U.S.-Indian research project: "Collaboration on the Development of a Fisheries and Harmful Algal Bloom and Monitoring and Prediction System in Indian Seas" which supported research visits. The visits took place at the Indian National Centre for Ocean Information Services (INCOIS) and Centre for Marine Living Resources and Ecology (CMLRE). We thank these institutes for their support during the research visits. We would also like to specifically acknowledge the support of  Dr. S.S.C Shenoi (INCOIS), Dr. M. Sudhakar (CMLRE), Dr. N. Saravanane (CMRLE), Dr. Ned Cyr, Dr. Kevin Werner (NOAA) and Dr. Usha Varanasi for their support. The sardine landings data have been collected and analyzed by the Central Marine Fisheries Research Institute since the 1950s; we acknowledge the many researchers involved in this long-term data set.
 
 \clearpage
 
@@ -96,9 +95,9 @@ Catches along the Kerala coast are high throughout the year except during quarte
 
 ## Contrast between catch modeling versus biomass modeling
 
-Yearly effort data for the individual gears is not available for the entire catch time series and the data available on size of the fleet are a coarse metric of effort and thus are difficult to use to compute catch-per-unit effort stastistics. Nonetheless the number of boats and fishers involved in the fishery has been increasing as the population in Kerala has increased. Oil sardines are caught primarly by ring seines, which was introduced in the early 1980s. Ring seines of different sizes are used both both traditional small boats with a small outboard motor and large mechanized ships [@DasEdwin2018]. Since 1985, the ring seine fishery has expanded steadily in terms of horsepower, size of boats, length of nets. There are concerns that overfishing and especially catch of juveniles, which are at time discarded [@DasEdwin2018] is a factor in the most recent oil sardine declines [@Kripaetal2018].
+Detailed yearly effort data for the individual gears is not available for the entire catch time series and the data available on size of the fleet are a coarse metric of effort and thus are difficult to use to compute catch-per-unit effort stastistics. Nonetheless the number of boats and fishers involved in the fishery has been increasing as the population in Kerala has increased. Oil sardines are caught primarly by ring seines, which were introduced in the early 1980s. Ring seines of different sizes are used both both traditional small boats with a small outboard motor and large mechanized ships [@DasEdwin2018]. Since 1985, the ring seine fishery has expanded steadily in terms of horsepower, size of boats, length of nets. There are concerns that overfishing and especially catch of juveniles, which are at times discarded [@DasEdwin2018] is a factor in the most recent oil sardine declines [@Kripaetal2018].
 
-The actual effort in the fishery is complex. It depends both on the fleet size and composition, but also depends on the fishers decisions about what species to fish for, where to fish for them (which affects transit time versus fishing time), 
+The relationship between the oil landings and the stock abundance is complex. It depends both on the fleet size and composition, but also depends on the proximity of the stock to the shore-based fishery. Although the landings are not a direct proxy for the overall abundance of oil sardines, landings are often assumed to reflect the total abundance in most years for reasons specific to the species and the fishery [@Kripaetal2018]: For most of the period of analysis, the fishery was artisanal: small boats with small motors, no refridgeration, and limited to the near shore. The ring seine was introduced but widespread mechanization of the fleet is a recent developement. The artisanal fisherman have limited ability to target the stock, at least not to the degree that landings can remain constant as a stock declines, a pattern than can be observed in a large, mobile, highly mechanized fleet. The fishery is unregulated, except for a brief closure during the monsoon months. Unlike some species, oil sardine shoals do not perform long distance migrations that take them out of contact with the fishery.  However for the purpose of our study, the assumption of a tight relationship between landings and abundance is not necessary. The objective is to understand what drives landings variability, whether it be due to abundance variability or due to exposure to the fishery (by being closer to shore).
 
 
 <!-- What is happening each quarter 
@@ -187,16 +186,19 @@ The catch during the post-monsoon part of the season should be correlated with f
 
 We modeled the catches during the late-monsoon season (quarter 3, July-September) separately from the post-monsoon season (October-March).  Thus there is no seasonality in our catch time series, as we analyzed a yearly time series of quarter 3 catches separately from a yearly time series of post-monsoon catches.  We divided the catch in this way for biological and statistical reasons.  Catch in quarter 3 (July-September) captures a mix of spawning age fish as it overlaps with the tail end of the spawning season, is affected by a fishery closure from July to mid-August during the summer monsoon, and is periodically inflated by the appearance of small 0-year fish from early summer spawning.  In addition, the covariates that affect the timing of spawning, movement of post-spawning mature fish inshore, and early egg and larval survival may be different than those that affect later growth, survival and  shoaling that exposes fish to the inshore fishery. Analyzing catch and covariate time series without seasonality also had an important statistical benefit---we removed the problem of seasonality in the catch and all the covariates. The oil sardine life-cycle is seasonal and driven by the strong seasonality in this monsoon influenced system. A simple statistical model with quarters will explain much of the quarterly catch data since most of the yearly variability is due to seasonality and any environmental covariate with a similar seasonality will also show high correlation with the landings. Our goal was to explain year-to-year variability thus eliminating the confounding effect of seasonality in the data was important.
 
-We tested ARIMA models on both quarter 3 and post-monsoon catch time series and found little support for auto-regressive errors (ARIMA models with a MA component) based on diagnostic tests of the residuals and model selection. The best supported ARIMA models were simple AR models ($x_t = b x_{t-1} + \epsilon_t$). This lack of strong autocorrelation in residuals has been found in other studies that tested ARIMA models for forecasting small pelagic catch [@StergiouChristou1996].  We thus used AR-only models, however we tested both linear and non-linear models using generalized additive models (GAM) of the form $x_t = s(x_{t-1}) + \epsilon_t$.  The landings models were fit using conditional sum of squares (conditioning on the first 2 landings values in the time series). We investigated correlations between environmental variables and sardine catch  using generalized additive models [GAMs, @Wood2017] to allow one to model the effect of a covariate as a flexible non-linear function. It was known that the effects of the environmental covariates were likely to be non-linear, albeit in an unknown way.  Our approach is analogous to that taken by Jacobson and MacCall [-@JacobsonMacCall1995] in a study of the effects of SST on Pacific sardine recruitment.  
+We tested ARIMA models on both quarter 3 and post-monsoon catch time series and found little support for auto-regressive errors (ARIMA models with a MA component) based on diagnostic tests of the residuals and model selection. The best supported ARIMA models were simple AR models ($x_t = b x_{t-1} + \epsilon_t$). This lack of strong autocorrelation in residuals has been found in other studies that tested ARIMA models for forecasting small pelagic catch [@StergiouChristou1996].  We thus used AR-only models, however we tested both linear and non-linear models using generalized additive models (GAM) of the form $x_t = s(x_{t-1}) + \epsilon_t$.  We investigated correlations between environmental variables and sardine catch  using generalized additive models [GAMs, @Wood2017] to allow one to model the effect of a covariate as a flexible non-linear function. It was known that the effects of the environmental covariates were likely to be non-linear, albeit in an unknown way.  Our approach is analogous to that taken by Jacobson and MacCall [-@JacobsonMacCall1995] in a study of the effects of SST on Pacific sardine recruitment.  
 
-The first step in our analysis was to determine the catch model: the model for current catch as a function of the past catch.  One feature of GAMs is that they allow the smoothing parameter of the response curve to be estimated. However we fixed the smoothing parameter at an intermediate value so that reasonably smooth responses were achieved and to limit the flexibility of the models being fit.  Multi-modal or overly flexible response curves would not be realistic for our application.  We used GAMs with smooth terms represented by penalized regression splines [@Wood2011, using the mgcv package in R] and fixed the smoothing term at an intermediate value (sp=0.6).
+The first step in our analysis was to determine the catch model: the model for current catch as a function of the past catch.  We explored four classes of models: null models with a simple function of prior catch, linear regressive models with one to two years of prior catch, dynamic linear models (DLM) which allow the regression parameters to vary (fit with the MARSS R package, @Holmesetal2012), and GAMs to allow the effect of prior catch to be non-linear. One feature of GAMs is that they allow the smoothing parameter of the response curve to be estimated. We fixed the smoothing parameter at an intermediate value so that smooth responses were achieved.  Multi-modal or overly flexible response curves would not be realistic for our application.  We fit GAMs with smooth terms represented by penalized regression splines [@Wood2011, using the mgcv package in R] and fixed the smoothing term at an intermediate value (sp=0.6).
 
-Our catch models took the following forms
+We compared the following catch models:
 
+* null: $ln(C_{i,t}) = ln(C_{j,t-1})$
 * random walk: $ln(C_{i,t}) = \alpha + ln(C_{j,t-1})) + \epsilon_t$
-* AR-1: $ln(C_{i,t}) = \alpha + \phi_1 ln(C_{j,t-1})) + \epsilon_t$
-* AR-2: $ln(C_{i,t}) = \alpha + \phi_1 ln(C_{j,t-1})) + \phi_2 ln(C_{k,t-2})) + \epsilon_t$
-* non-linear: $ln(C_{i,t}) = \alpha + s_1(ln(C_{j,t-1})) + s_2(ln(C_{k,t-2})) + \epsilon_t$
+* linear AR-1: $ln(C_{i,t}) = \alpha + \phi ln(C_{j,t-1})) + \epsilon_t$
+* linear AR-2: $ln(C_{i,t}) = \alpha + \phi_1 ln(C_{j,t-1})) + \phi_2 ln(C_{k,t-2})) + \epsilon_t$
+* DLM AR-1: $ln(C_{i,t}) = \alpha_t + \phi_t ln(C_{j,t-1})) + \epsilon_t$
+* GAM AR-1: $ln(C_{i,t}) = \alpha + s(ln(C_{j,t-1})) + \epsilon_t$
+* GAM AR-2: $ln(C_{i,t}) = \alpha + s_1(ln(C_{j,t-1})) + s_2(ln(C_{k,t-2})) + \epsilon_t$
 
 \noindent where $ln(C_{i,t})$ is the log catch in the current year $t$ in season $i$. We modeled two different catches: 3rd quarter catch $S_t$ (July-September), which is during the late part of the summer monsoon, and post-monsoon catch $N_t$ (October-June).  The catches were logged to stabilize and normalize the variance.  $s()$ is a non-linear function estimated by the GAM algorithm.  The model is primarily statistical, meaning it should not be thought of as being a population growth model.  We tested models with prior year post-monsoon catch ($N_{t-1}$) and 3rd quarter catch ($S_{t-1}$) as the explanatory catch variable. $S_t$ was not used as a predictor for $N_t$; $S_t$ is the quarter immediately prior to $N_t$ and would not be available for a forecast model since time is required to process landings data. The catch models were fit to 1982 to 2015 catch data, corresponding to the years where the SST, upwelling and precipitation data were available.  F-tests and AIC on nested sets of models [@Woodetal2016] were used to evaluate the support for the catch models and later for the covariate models.  After selection of the best model with the 1982-2015 data, the fitting was repeated with the 1956-1981 and 1956-2015 catch data to confirm the form of the catch models.
 
