--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -1,6 +1,5 @@
 ---
-title: '\large{Fishing in a warming ocean: influence of changing temperature and upwelling intensity on Indian oil sardine (\textit{Sardinella longiceps}) landings}'
-author: \newline Eli E. Holmes$^1$, Smitha B.R.$^2$, Nimit Kumar$^3$, \newline Sourav Maity$^3$, David M. Checkley$^4$, Mark L. Wells$^5$, Vera L. Trainer$^1$
+title: '\Large Fishing in a warming ocean: influence of changing temperature and upwelling intensity on Indian oil sardine (\textit{Sardinella longiceps}) landings'
 #date: '`r format(Sys.time(), "%d %B, %Y")`'
 output: 
   pdf_document: default
@@ -25,6 +24,9 @@ header-includes:
 #Generic setup code common across all Rmds
 ```
 
+\noindent \large Eli E. Holmes$^1$, Smitha B.R.$^2$, Nimit Kumar$^3$, Sourav Maity$^3$, David M. Checkley$^4$, Mark L. Wells$^5$, Vera L. Trainer$^1$
+
+
 1. Northwest Fisheries Science Center, NOAA, Seattle, WA. 
 
 2. Centre for Marine Living Resources and Ecology, MoES, Kochi, India. 
@@ -35,6 +37,8 @@ header-includes:
 5. School of Marine Sciences, University of Maine, Orono, ME.
 
 \noindent{\bf Running title}: Modeling Indian oil sardine landings
+
+\clearpage
 
 # Acknowledgements {-}
 
@@ -113,7 +117,7 @@ As the success of commercial fishery for each season is determined by the number
 
 ## Sardine landing data
 
-Quarterly fish landing data have been collected by the Central Marine Fisheries Research Institute (CMFRI) in Kochi, India, since the early 1950s using a stratified multi-stage sample design [@Srinathetal2005]. The survey visits the fish landing centers along the entire southeast coast of India and samples the catch from the variety of boat types and gear types used in the coastal fishery. Landings estimates are available for all the coastal states, however we model the catch for the state of Kerala only, where the longest time series is available and the overwhelming majority of oil sardines are landed (Figure `r ref("fig:catch")`). Kerala contributes a remarkable 14.4% of the total marine production (CMFRI, 2017) and Major resources contributing to the pelagic landings were oilsardine (57.4%). The quarterly landings (metric tons) for oil sardine landed from all gears in Kerala were obtained from CMFRI reports (1956-1984) and online databases (1985-2015) [@CMFRI1969; @Pillai1982; @Jacobetal1987; @CMFRI1995; @CMFRI2016]. The quarterly landing data were log-transformed to stabilize the variance. Yearly effort data for the individual gears is not available for the entire catch time series and the data available on size of the fleet are a coarse metric of effort and thus are difficult to use to compute catch-per-unit effort stastistics. Our analysis uses landings not catch-per-unit effort as is standard in landings modeling with the goal of landings forecasting. Landings are a function of both biomass and catchability, but the goal in our study is to describe and forecast landings, not biomass. 
+Quarterly fish landing data have been collected by the Central Marine Fisheries Research Institute (CMFRI) in Kochi, India, since the early 1950s using a stratified multi-stage sample design [@Srinathetal2005]. The survey visits the fish landing centers along the entire southeast coast of India and samples the catch from the variety of boat types and gear types used in the coastal fishery. Landings estimates are available for all the coastal states, however we model the catch for the state of Kerala only, where the longest time series is available and the overwhelming majority of oil sardines are landed (Figure `r ref("fig:catch")`). Kerala contributes a remarkable 14.4% of the total marine production (CMFRI, 2017) and Major resources contributing to the pelagic landings were oilsardine (57.4%). The quarterly landings (metric tons) for oil sardine landed from all gears in Kerala were obtained from CMFRI reports (1956-1984) and online databases (1985-2015) [@CMFRI1969; @Pillai1982; @Jacobetal1987; @CMFRI1995; @CMFRI2016]. The quarterly landing data were log-transformed to stabilize the variance. Yearly effort data for the individual gears is not available for the entire catch time series and the data available on size of the fleet are a coarse metric of effort and thus are difficult to use to compute catch-per-unit effort stastistics. However the goal in this study is to describe and forecast landings, not biomass, and our analysis uses landings data as is standard in landings modeling.
 
 
 <!--
@@ -186,9 +190,9 @@ The catch during the post-monsoon part of the season should be correlated with f
 
 We modeled the catches during the late-monsoon season (quarter 3, July-September) separately from the post-monsoon season (October-March).  Thus there is no seasonality in our catch time series, as we analyzed a yearly time series of quarter 3 catches separately from a yearly time series of post-monsoon catches.  We divided the catch in this way for biological and statistical reasons.  Catch in quarter 3 (July-September) captures a mix of spawning age fish as it overlaps with the tail end of the spawning season, is affected by a fishery closure from July to mid-August during the summer monsoon, and is periodically inflated by the appearance of small 0-year fish from early summer spawning.  In addition, the covariates that affect the timing of spawning, movement of post-spawning mature fish inshore, and early egg and larval survival may be different than those that affect later growth, survival and  shoaling that exposes fish to the inshore fishery. Analyzing catch and covariate time series without seasonality also had an important statistical benefit---we removed the problem of seasonality in the catch and all the covariates. The oil sardine life-cycle is seasonal and driven by the strong seasonality in this monsoon influenced system. A simple statistical model with quarters will explain much of the quarterly catch data since most of the yearly variability is due to seasonality and any environmental covariate with a similar seasonality will also show high correlation with the landings. Our goal was to explain year-to-year variability thus eliminating the confounding effect of seasonality in the data was important.
 
-We tested ARIMA models on both quarter 3 and post-monsoon catch time series and found little support for auto-regressive errors (ARIMA models with a MA component) based on diagnostic tests of the residuals and model selection. The best supported ARIMA models were simple AR models ($x_t = b x_{t-1} + \epsilon_t$). This lack of strong autocorrelation in residuals has been found in other studies that tested ARIMA models for forecasting small pelagic catch [@StergiouChristou1996].  We thus used AR-only models, however we tested both linear and non-linear models using generalized additive models (GAM) of the form $x_t = s(x_{t-1}) + \epsilon_t$.  We investigated correlations between environmental variables and sardine catch  using generalized additive models [GAMs, @Wood2017] to allow one to model the effect of a covariate as a flexible non-linear function. It was known that the effects of the environmental covariates were likely to be non-linear, albeit in an unknown way.  Our approach is analogous to that taken by Jacobson and MacCall [-@JacobsonMacCall1995] in a study of the effects of SST on Pacific sardine recruitment.  
+We tested ARIMA models on both monsoon (Jul-Sep) and post-monsoon (Oct-Mar) catch time series and found little support for auto-regressive errors (ARIMA models with a MA component) based on diagnostic tests of the residuals and model selection. The best supported ARIMA models were simple AR models ($x_t = b x_{t-1} + \epsilon_t$). This lack of strong autocorrelation in residuals has been found in other studies that tested ARIMA models for forecasting small pelagic catch [@StergiouChristou1996].  We thus used AR-only models, however we tested both linear and non-linear models using generalized additive models [GAMs, @Wood2017] of the form $x_t = s(x_{t-1}) + \epsilon_t$ and tested time-varying linear models with dynamic linear models (DLM).  GAMs allow one to model the effect of a covariate as a flexible non-linear function while DLMs allow one to allow the effect of the covariate to vary over time. It was known that the effects of the environmental covariates were likely to be non-linear, albeit in an unknown way.  Our GAM approach is analogous to that taken by Jacobson and MacCall [-@JacobsonMacCall1995] in a study of the effects of SST on Pacific sardine recruitment.  
 
-The first step in our analysis was to determine the catch model: the model for current catch as a function of the past catch.  We explored four classes of models: null models with a simple function of prior catch, linear regressive models with one to two years of prior catch, dynamic linear models (DLM) which allow the regression parameters to vary (fit with the MARSS R package, @Holmesetal2012), and GAMs to allow the effect of prior catch to be non-linear. One feature of GAMs is that they allow the smoothing parameter of the response curve to be estimated. We fixed the smoothing parameter at an intermediate value so that smooth responses were achieved.  Multi-modal or overly flexible response curves would not be realistic for our application.  We fit GAMs with smooth terms represented by penalized regression splines [@Wood2011, using the mgcv package in R] and fixed the smoothing term at an intermediate value (sp=0.6).
+The first step in our analysis was to determine the catch model: the model for current catch as a function of the past catch.  We explored four classes of models: null models with a simple function of prior catch, linear regressive models with one to two years of prior catch, dynamic linear models (DLM) which allow the regression parameters to vary [@Holmesetal2012, using the MARSS package in R], and GAMs to allow the effect of prior catch to be non-linear. One feature of GAMs is that they allow the smoothing parameter of the response curve to be estimated. We fixed the smoothing parameter at an intermediate value so that smooth responses were achieved.  Multi-modal or overly flexible response curves would not be realistic for our application.  We fit GAMs with smooth terms represented by penalized regression splines [@Wood2011, using the mgcv package in R] and fixed the smoothing term at an intermediate value (sp=0.6).
 
 We compared the following catch models:
 
@@ -200,9 +204,9 @@ We compared the following catch models:
 * GAM AR-1: $ln(C_{i,t}) = \alpha + s(ln(C_{j,t-1})) + \epsilon_t$
 * GAM AR-2: $ln(C_{i,t}) = \alpha + s_1(ln(C_{j,t-1})) + s_2(ln(C_{k,t-2})) + \epsilon_t$
 
-\noindent where $ln(C_{i,t})$ is the log catch in the current year $t$ in season $i$. We modeled two different catches: 3rd quarter catch $S_t$ (July-September), which is during the late part of the summer monsoon, and post-monsoon catch $N_t$ (October-June).  The catches were logged to stabilize and normalize the variance.  $s()$ is a non-linear function estimated by the GAM algorithm.  The model is primarily statistical, meaning it should not be thought of as being a population growth model.  We tested models with prior year post-monsoon catch ($N_{t-1}$) and 3rd quarter catch ($S_{t-1}$) as the explanatory catch variable. $S_t$ was not used as a predictor for $N_t$; $S_t$ is the quarter immediately prior to $N_t$ and would not be available for a forecast model since time is required to process landings data. The catch models were fit to 1982 to 2015 catch data, corresponding to the years where the SST, upwelling and precipitation data were available.  F-tests and AIC on nested sets of models [@Woodetal2016] were used to evaluate the support for the catch models and later for the covariate models.  After selection of the best model with the 1982-2015 data, the fitting was repeated with the 1956-1981 and 1956-2015 catch data to confirm the form of the catch models.
+\noindent $ln(C_{i,t})$ is the log catch in the current year $t$ in season $i$. We modeled two different catches: monsoon catch $S_t$ (July-September), which is during the late part of the summer monsoon, and post-monsoon catch $N_t$ (October-June).  The catches were logged to stabilize and normalize the variance.  $s()$ is a non-linear function estimated by the GAM algorithm.  The model is primarily statistical, meaning it should not be thought of as being a population growth model.  We tested models with prior year post-monsoon catch ($N_{t-1}$) and 3rd quarter catch ($S_{t-1}$) as the explanatory catch variable. $S_t$ was not used as a predictor for $N_t$; $S_t$ is the quarter immediately prior to $N_t$ and would not be available for a forecast model since time is required to process landings data. The catch models were fit to 1982 to 2015 catch data, corresponding to the years where the SST, upwelling and precipitation data were available.  F-tests and AIC on nested sets of models [@Woodetal2016] were used to evaluate the support for the catch models and later for the covariate models.  After selection of the best model with the 1982-2015 data, the fitting was repeated with the 1956-1981 and 1956-2015 catch data to confirm the form of the catch models.
 
-Once the catch models were determined, the covariates were studied individually and then jointly. As with the catch models, F-tests and AIC on nested sets of GAM models were used to evaluate the support for models with covariates.  The smoothing term was fixed at an intermediate value (sp=0.6) instead of treated as an estimated variable.  Our models for catch with covariates typically took the form
+Once the catch models were determined, the covariates were studied individually and then jointly. As with the catch models, F-tests, AIC and LOO (leave-one-out cross-validation) on nested sets of models were used to evaluate the support for models with covariates.  The smoothing term was fixed at an intermediate value (sp=0.6) instead of treated as an estimated variable.  Our models for catch with covariates typically took the form
 $ln(C_{i,t}) = M + s_1(V_{1,t}) + s_2(V_{2,t-1}) + \epsilon_t$ or $ln(C_{i,t}) = M + \beta_1 V_{1,t} + \beta_2 V_{2,t-1} + \epsilon_t$
 where $M$ was the best catch model from step 1.  Thus models with covariates modeled both as a linear and non-linear effect were compared. The covariates tested are those discussed in the section on covariates that have been hypothesized to drive the size of the sardine biomass exposed to the fishery. We tested both models with one and two covariates, and did not use correlated covariates in the same model.
 
