--- a/Appendices.Rmd
+++ b/Appendices.Rmd
@@ -62,6 +62,9 @@ cat("\\clearpage")
 
 # Appendix D: Covariates along the SE India coast
 
+```{r child = 'setup.Rmd'}
+```
+
 ```{r upw.mon, echo=FALSE,fig.cap="Figure D1. Upwelling index.", fig.width=8,fig.height=8,message=FALSE,warning=FALSE}
 ### FIGURE Upwelling
 oldpar=par(mfrow=c(2,2), mar=c(2,5,2,0))
@@ -75,37 +78,37 @@ plot(datts,ylab=paste("SST Upwelling Index Box",i),xlab="",bty="n",ylim=c(-2,5),
 }
 for(i in 2:5){
   covname=paste("SST.UPW.",i,sep="")
-dat=seio_covariates_mon[[covname]]
-datmon=seio_covariates_mon$Month
-if(i==2) oldpar=par(fig = c(0.05, .25, 0.8, 1), new = T)  
-if(i==3) oldpar=par(fig = c(0.05+.5, .25+.5, 0.8, 1), new = T)  
-if(i==4) oldpar=par(fig = c(0.05, .25, 0.8-.5, 1-.5), new = T)  
-if(i==5) oldpar=par(fig = c(0.05+.5, .25+.5, 0.8-.5, 1-.5), new = T)  
-catchmeans=tapply(dat, datmon, mean, na.rm=TRUE)
-names(catchmeans)=1:12
-barplot(catchmeans,ylab="",cex.axis=.75,cex.names=.75,ylim=c(0,2), col="grey", xaxt="n")
-title("Mean Mthly\nIndex",cex.main=.75)
+  dat=seio_covariates_mon[[covname]]
+  datmon=seio_covariates_mon$Month
+  if(i==2) oldpar=par(fig = c(0.05, .25, 0.8, 1), new = TRUE)
+  if(i==3) oldpar=par(fig = c(0.05+.5, .25+.5, 0.8, 1), new = TRUE)
+  if(i==4) oldpar=par(fig = c(0.05, .25, 0.8-.5, 1-.5), new = TRUE)
+  if(i==5) oldpar=par(fig = c(0.05+.5, .25+.5, 0.8-.5, 1-.5), new = TRUE)
+  catchmeans=tapply(dat, datmon, mean, na.rm=TRUE)
+  names(catchmeans)=1:12
+  barplot(catchmeans,ylab="",cex.axis=.75,cex.names=.75,ylim=c(0,2), col="grey", xaxt="n")
+  title("Mean Mthly\nIndex",cex.main=.75)
 }
 library(maps)
 library(mapdata)
- mymap=map('worldHires','india',xlim=c(74.5,80),ylim=c(7,14),plot=FALSE)
-  botlats=c(12:8,12:8,9,8,8); toplats=botlats+1
-  cenlats=botlats+.5
-  tmp= c(74.2,74.9,75.3,75.5,76.3)     
-  leftlons=c(tmp,tmp-1,73.5,74.3,73.3);rightlons=leftlons+1
-  cenlons=leftlons+.5
+mymap=map('worldHires','india',xlim=c(74.5,80),ylim=c(7,14),plot=FALSE)
+botlats=c(12:8,12:8,9,8,8); toplats=botlats+1
+cenlats=botlats+.5
+tmp= c(74.2,74.9,75.3,75.5,76.3)
+leftlons=c(tmp,tmp-1,73.5,74.3,73.3);rightlons=leftlons+1
+cenlons=leftlons+.5
 for(i in 2:5){
-  if(i==2) oldpar=par(fig = c(0.05, .25, .55, .75), new = T)  
-if(i==3) oldpar=par(fig = c(0.05+.5, .25+.5, .55, .75), new = T)  
-if(i==4) oldpar=par(fig = c(0.05, .25, 0.05, .25), new = T)  
-if(i==5) oldpar=par(fig = c(0.05+.5, .25+.5, 0.05, .25), new = T)  
-   plot(mymap$x,mymap$y,type="l",bty="n",xaxt="n",yaxt="n",ylab="",xlab="")
-    botlat=botlats[i]; toplat=botlat+1
-    leftlon=leftlons[i]; rightlon=leftlon+1
-    y=c(botlat,toplat,toplat,botlat,botlat)
-    x=c(leftlon,leftlon,rightlon,rightlon,leftlon)
-    polygon(x,y)
-  }
+  if(i==2) oldpar=par(fig = c(0.05, .25, .55, .75), new = TRUE)
+  if(i==3) oldpar=par(fig = c(0.05+.5, .25+.5, .55, .75), new = TRUE)
+  if(i==4) oldpar=par(fig = c(0.05, .25, 0.05, .25), new = TRUE)
+  if(i==5) oldpar=par(fig = c(0.05+.5, .25+.5, 0.05, .25), new = TRUE)
+  plot(mymap$x,mymap$y,type="l",bty="n",xaxt="n",yaxt="n",ylab="",xlab="")
+  botlat=botlats[i]; toplat=botlat+1
+  leftlon=leftlons[i]; rightlon=leftlon+1
+  y=c(botlat,toplat,toplat,botlat,botlat)
+  x=c(leftlon,leftlon,rightlon,rightlon,leftlon)
+  polygon(x,y)
+}
 par(oldpar)
 ```
 
@@ -219,6 +222,20 @@ cat("\\clearpage")
 ```{r fig-chl-2016, out.width = "400px", fig.align='center', echo=FALSE, fig.cap=paste("Figure",  ref("fig:CHL")), message=FALSE, warning=FALSE}
 figfile = system.file("docs", "2016 CHL.png", package="SardineForecast")
 knitr::include_graphics(figfile)
+```
+
+
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
+```
+
+# Appendix G: Influential years tests
+
+```{r child = 'Table App D.Rmd'}
+```
+
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
 ```
 
 
