temp add in wo S2 to see how that looks

--- a/Appendices.Rmd
+++ b/Appendices.Rmd
@@ -44,6 +44,14 @@ cat("\\clearpage")
 cat("\\clearpage")
 ```
 
+```{r child = 'Table App B nonspawner covariates M wo S2.Rmd'}
+```
+
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
+```
+
+
 <!-- ```{r child = 'Table App B nonspawner covariates M wo S2.Rmd'} -->
 <!-- ``` -->
 
